Atualização com correção de tamanhos

--- a/index.html
+++ b/index.html
@@ -21,15 +21,15 @@
             <p class="apresentacao__conteudo__texto">Olá! Sou Gabriel Sojo, desenvolvedor em treinamento, estou usando essa pagina para testar minhas habilidades adquiridas em Front-end com foco em HTML e CSS. </p>
             <div class="apresentacao__conteudo__links">
                 <h2 class="apresentacao__conteudo__links__subtitulo">Acesse minhas redes:</h2>
-                <a class="apresentacao__conteudo__links__navegacao" href="https://github.com">
+                <a class="apresentacao__conteudo__links__navegacao" href="https://github.com/bielsojo">
                     <img src="./assets/github.png" alt="Icone Github">
                     GitHub
                 </a>
-                <a class="apresentacao__conteudo__links__navegacao" href="https://www.instagram.com/">
+                <a class="apresentacao__conteudo__links__navegacao" href="https://www.instagram.com/_bielsojo/">
                     <img src="./assets/instagram.png" alt="Icone Instagem">
                     Instagram
                 </a>
-                <a class="apresentacao__conteudo__links__navegacao" href="https://linkedin.com">
+                <a class="apresentacao__conteudo__links__navegacao" href="https://www.linkedin.com/in/gabriel-sojo/">
                     <img src="./assets/linkedin.png" alt="Icone Linkedin">
                     Linkedin
                 </a>
