--- a/about.html
+++ b/about.html
@@ -16,7 +16,7 @@
         </nav>
     </header>
     <main class="apresentacao">
-        <section class="apresentacao__conteudo__about">
+        <section class="apresentacao__conteudo">
             <h1 class="apresentacao__conteudo__titulo">Sobre mim</h1>
             <p class="apresentacao__conteudo__texto">Olá, meu nome é Gabriel Sojo e sou um entusiasta da tecnologia desde a infância. Cresci rodeado de computadores, graças ao meu pai que trabalhava na área de TI, e isso despertou em mim uma grande curiosidade pelos sistemas e programas. Desde a sétima série, participei de uma equipe de robótica onde aprendi a programar, aumentando ainda mais minha paixão por essa área.</p>
             <p class="apresentacao__conteudo__texto">Aos 17 anos, ingressei no SENAI da Mercedes-Benz, onde tive a oportunidade de aprender muito sobre mecânica e eletrônica. Apesar de não ter aprimorado meus conhecimentos em programação durante esse período, foi lá que percebi que queria seguir carreira na área de tecnologia. Após sair da Mercedes, comecei a me dedicar aos estudos em programação e desenvolvimento de sistemas, e essa é a minha paixão até hoje. Este site é um dos primeiros passos nessa jornada e espero poder compartilhar com vocês minhas experiências e aprendizados ao longo do caminho.</p>
